# vulkan-hpp-triangle-android

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
android/: build.gradle  gradle.properties  settings.gradle  setup.sh
android/app/: build.gradle
android/app/src/androidTest/java/com/franciscobicho/naru/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: vulkan-wrapper-patch.h
android/app/src/main/java/com/franciscobicho/naru/: MainActivity.java
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/franciscobicho/naru/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
android/sdl/: build.gradle
android/sdl/src/main/: AndroidManifest.xml
shaders/: CMakeLists.txt  compile.bat
src/: CMakeLists.txt  main.cpp
